# clearpath_simulator

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
clearpath_generator_gz/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_generator_gz/clearpath_generator_gz/launch/: generate_launch  generator.py  sensors.py
clearpath_generator_gz/clearpath_generator_gz/param/: generate_param  generator.py  sensors.py
clearpath_gz/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_gz/config/: gui.config
clearpath_gz/launch/: clearpath_gz.launch.py  gz_sim.launch.py  robot_spawn.launch.py  ros_gz_bridge.launch.py  simulation.launch.py
clearpath_gz/worlds/: warehouse.sdf
clearpath_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
launch/: clearpath_simulator.launch.py  gz_sim.launch.py  robot_spawn.launch.py  ros_gz_bridge.launch.py
worlds/: warehouse.sdf
