<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_simulator</name>
  <version>0.0.0</version>
  <description>Clearpath robot simulator</description>

  <author email="rkreinin@clearpathrobotics.com">Roni Kreinin</author>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_mounts_description</exec_depend>
  <exec_depend>clearpath_platform_description</exec_depend>
  <exec_depend>clearpath_sensors_description</exec_depend>
  <exec_depend>clearpath_viz</exec_depend>
  
  <exec_depend>ros_gz</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
